Frontend/src/stylesheets/index.scss
body {
  margin: 0;
  padding: 0;
  font-size: .875rem;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.wrapper {
  display: flex;
  width: 100%;
  align-items: stretch;

  .container-fluid {
    overflow: hidden;
  }
}

.app-page {
  .app-list {
    height: calc(100vh - 80px);
    padding: 0 0.0rem 0 0;
    border-right: 0.1rem aliceblue solid;
    //background-color: #f8f9fa;

    .list-group {
      max-height:calc(100vh);
      overflow: auto;
    }

    .active {
      border-left: 4px solid blueviolet;
      border-radius: 5px;
      box-shadow: 0px 0px 5px 0px #eaeaea;
    }
  }

  .app-form {
    padding: 0 1.5rem;
    max-height:calc(100vh - 60px);
    overflow: auto;
 }

  .modal-header {
    padding: 0 0 10px 0;
  }

  //Search
  .app-search {
    padding-left: 1.2rem;
    border: 1px aliceblue solid;
  }

  //Title
  .page-title {
    h4 {
        padding-left: 0;
    }
  }  
}

//Button
.app-button {
   &.app-search-button {
     //border-top-left-radius: 20px !important;
     //border-radius: 20px;
     border-color: #eaeaea;
   }  

  .spinner-border {
      width: 1.1rem;
      height: 1.1rem;
      margin-right: 0.2rem;
      border-width: 0.1rem;
  }
}

//Spinner
.app-spinner {
  margin: 0.5rem;

  .spinner-border {
    width: 1.1rem;
    height: 1.1rem;
    margin-right: 0.2rem;
    border-width: 0.1rem;
  }
}

.login-container {
  height: 100vh;
  width: 100%;

  .login-form {
    max-width: 33rem;
    padding: 1.5rem;
    margin: auto;

    svg {
      color: lightblue;
    }
  }
}

//Nav bar
.nav {
  .nav-item {
    .active {
      background-color: #eaeaea !important;
      border-left: 4px solid blueviolet;
      border-radius: 5px;
      box-shadow: 0px 0px 5px 0px #eaeaea;
    }
  }
}

.form-control-dark {
    color: #fff;
    background-color: rgba(255, 255, 255, .1);
    border-color: rgba(255, 255, 255, .1);
    border-radius: 0;
    border: 0;
}

.form-row {
  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10 {
    padding-left: 0;
  }

  .custom-switch { 
    padding: 0.75rem 0;
   }
}

